--- a/data_collect.ipynb
+++ b/data_collect.ipynb
@@ -27,14 +27,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 51,
    "id": "ff62c634",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd \n",
     "import requests\n",
-    "import pycountry"
+    "import pycountry\n",
+    "from sqlalchemy import create_engine\n",
+    "from sqlalchemy import text\n"
    ]
   },
   {
@@ -47,10 +49,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "id": "61037577",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Elitebook\\AppData\\Local\\Temp\\ipykernel_7024\\413640658.py:6: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
+      "  t= pd.read_html(response.text)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -115,14 +125,18 @@
        "4       Angola *       71.5"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "url = 'https://en.wikipedia.org/wiki/List_of_countries_by_infant_and_under-five_mortality_rates'\n",
-    "t= pd.read_html(url)\n",
+    "# Send request with headers\n",
+    "headers = {\"User-Agent\": \"Mozilla/5.0\"}\n",
+    "response = requests.get(url, headers=headers)\n",
+    "#read\n",
+    "t= pd.read_html(response.text)\n",
     "mortality_df =t[0]\n",
     "mortality_df.head()"
    ]
@@ -137,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "id": "5267bee0",
    "metadata": {},
    "outputs": [
@@ -342,7 +356,7 @@
        "[266 rows x 8 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
    "id": "61131822",
    "metadata": {},
    "outputs": [
@@ -391,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 55,
    "id": "3ac5af28",
    "metadata": {},
    "outputs": [
@@ -414,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 56,
    "id": "5bd1dad5",
    "metadata": {},
    "outputs": [
@@ -432,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 57,
    "id": "9cca94a3",
    "metadata": {},
    "outputs": [
@@ -490,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 58,
    "id": "f6997ebd",
    "metadata": {},
    "outputs": [],
@@ -521,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 59,
    "id": "3240d6ac",
    "metadata": {},
    "outputs": [],
@@ -529,14 +543,14 @@
     "def to_abb(name):\n",
     "    try:\n",
     "        clean_name = clean_country_name(name)\n",
-    "        return pycountry.countries.lookup(clean_name).alpha_3\n",
+    "        return pycountry.countries.lookup(clean_name).alpha_2\n",
     "    except:\n",
     "        return None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 60,
    "id": "98d709d2",
    "metadata": {},
    "outputs": [
@@ -571,31 +585,31 @@
        "      <th>0</th>\n",
        "      <td>Afghanistan *</td>\n",
        "      <td>58.0</td>\n",
-       "      <td>AFG</td>\n",
+       "      <td>AF</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Albania *</td>\n",
        "      <td>9.8</td>\n",
-       "      <td>ALB</td>\n",
+       "      <td>AL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Algeria *</td>\n",
        "      <td>23.7</td>\n",
-       "      <td>DZA</td>\n",
+       "      <td>DZ</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Andorra *</td>\n",
        "      <td>2.5</td>\n",
-       "      <td>AND</td>\n",
+       "      <td>AD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Angola *</td>\n",
        "      <td>71.5</td>\n",
-       "      <td>AGO</td>\n",
+       "      <td>AO</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -607,7 +621,7 @@
        "      <th>188</th>\n",
        "      <td>Vietnam *</td>\n",
        "      <td>20.9</td>\n",
-       "      <td>VNM</td>\n",
+       "      <td>VN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>189</th>\n",
@@ -619,19 +633,19 @@
        "      <th>190</th>\n",
        "      <td>Yemen *</td>\n",
        "      <td>59.6</td>\n",
-       "      <td>YEM</td>\n",
+       "      <td>YE</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>191</th>\n",
        "      <td>Zambia *</td>\n",
        "      <td>61.4</td>\n",
-       "      <td>ZMB</td>\n",
+       "      <td>ZM</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>192</th>\n",
        "      <td>Zimbabwe *</td>\n",
        "      <td>53.9</td>\n",
-       "      <td>ZWE</td>\n",
+       "      <td>ZW</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -640,22 +654,22 @@
       ],
       "text/plain": [
        "          Location  2020 rate   abb\n",
-       "0    Afghanistan *       58.0   AFG\n",
-       "1        Albania *        9.8   ALB\n",
-       "2        Algeria *       23.7   DZA\n",
-       "3        Andorra *        2.5   AND\n",
-       "4         Angola *       71.5   AGO\n",
+       "0    Afghanistan *       58.0    AF\n",
+       "1        Albania *        9.8    AL\n",
+       "2        Algeria *       23.7    DZ\n",
+       "3        Andorra *        2.5    AD\n",
+       "4         Angola *       71.5    AO\n",
        "..             ...        ...   ...\n",
-       "188      Vietnam *       20.9   VNM\n",
+       "188      Vietnam *       20.9    VN\n",
        "189    Palestine *       16.5  None\n",
-       "190        Yemen *       59.6   YEM\n",
-       "191       Zambia *       61.4   ZMB\n",
-       "192     Zimbabwe *       53.9   ZWE\n",
+       "190        Yemen *       59.6    YE\n",
+       "191       Zambia *       61.4    ZM\n",
+       "192     Zimbabwe *       53.9    ZW\n",
        "\n",
        "[193 rows x 3 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 61,
    "id": "5a0cdfad",
    "metadata": {},
    "outputs": [
@@ -892,7 +906,7 @@
        "[266 rows x 9 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -912,13 +926,281 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 62,
    "id": "a16323b6",
    "metadata": {},
    "outputs": [],
    "source": [
     "mortality_df.to_csv(\"mortarlity.csv\",index=False)\n",
     "gdp_df.to_csv(\"gdp.csv\",index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "cf6c1d3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.chdir(r'F:\\project\\Healthy Sustainable Development Analysis')\n",
+    "\n",
+    "gdp_df = pd.read_csv('gdp.csv')\n",
+    "mortarlity_df = pd.read_csv('mortarlity.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "ec322146",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['staging_mortarlity', 'staging_gdp']\n"
+     ]
+    }
+   ],
+   "source": [
+    "engine = create_engine('postgresql+psycopg2://postgres:123456@localhost:5432/world_data_psql')\n",
+    "\n",
+    "with engine.connect() as conn:\n",
+    "    result = conn.execute(text(\"SELECT table_name FROM information_schema.tables WHERE table_schema='public';\"))\n",
+    "    print([row[0] for row in result])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "7ae27376",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CSV files loaded into PostgreSQL successfully!\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Load CSVs into PostgreSQL staging tables\n",
+    "mortarlity_df.to_sql('staging_mortarlity', engine, if_exists='replace', index=False)\n",
+    "gdp_df.to_sql('staging_gdp', engine, if_exists='replace', index=False)\n",
+    "\n",
+    "print(\"CSV files loaded into PostgreSQL successfully!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "fe843b9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           table_name\n",
+      "0  staging_mortarlity\n",
+      "1         staging_gdp\n"
+     ]
+    }
+   ],
+   "source": [
+    "tables = pd.read_sql(\"SELECT table_name FROM information_schema.tables WHERE table_schema='public';\", engine)\n",
+    "print(tables)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "7d35ecb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        Location  2020 rate abb\n",
+      "0  Afghanistan *       58.0  AF\n",
+      "1      Albania *        9.8  AL\n",
+      "2      Algeria *       23.7  DZ\n",
+      "3      Andorra *        2.5  AD\n",
+      "4       Angola *       71.5  AO\n",
+      "                                           indicator  \\\n",
+      "0  {'id': 'NY.GDP.MKTP.KD.ZG', 'value': 'GDP grow...   \n",
+      "1  {'id': 'NY.GDP.MKTP.KD.ZG', 'value': 'GDP grow...   \n",
+      "2  {'id': 'NY.GDP.MKTP.KD.ZG', 'value': 'GDP grow...   \n",
+      "3  {'id': 'NY.GDP.MKTP.KD.ZG', 'value': 'GDP grow...   \n",
+      "4  {'id': 'NY.GDP.MKTP.KD.ZG', 'value': 'GDP grow...   \n",
+      "\n",
+      "                                             country countryiso3code  date  \\\n",
+      "0  {'id': 'ZH', 'value': 'Africa Eastern and Sout...             AFE  2020   \n",
+      "1  {'id': 'ZI', 'value': 'Africa Western and Cent...             AFW  2020   \n",
+      "2                {'id': '1A', 'value': 'Arab World'}             ARB  2020   \n",
+      "3    {'id': 'S3', 'value': 'Caribbean small states'}             CSS  2020   \n",
+      "4  {'id': 'B8', 'value': 'Central Europe and the ...             CEB  2020   \n",
+      "\n",
+      "      value  unit obs_status  decimal abb  \n",
+      "0 -2.859784  None       None        1  ZH  \n",
+      "1 -0.984117  None       None        1  ZI  \n",
+      "2 -4.757145  None       None        1  1A  \n",
+      "3 -9.113253  None       None        1  S3  \n",
+      "4 -3.315368  None       None        1  B8  \n"
+     ]
+    }
+   ],
+   "source": [
+    "mortarlity_staging = pd.read_sql(\"SELECT * FROM staging_mortarlity LIMIT 5;\", engine)\n",
+    "gdp_staging = pd.read_sql(\"SELECT * FROM staging_gdp LIMIT 5;\", engine)\n",
+    "\n",
+    "print(mortarlity_staging)\n",
+    "print(gdp_staging)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "08a6e77a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            country_name  mortarlity_rate  gdp_growth abb\n",
+      "0          Afghanistan *             58.0   -2.351101  AF\n",
+      "1              Albania *              9.8   -3.313756  AL\n",
+      "2              Algeria *             23.7   -5.000000  DZ\n",
+      "3              Andorra *              2.5  -11.183940  AD\n",
+      "4               Angola *             71.5   -5.638215  AO\n",
+      "5  Antigua and Barbuda *              6.4  -18.868777  AG\n",
+      "6            Argentina *              8.6   -9.900485  AR\n",
+      "7              Armenia *             10.9   -7.200000  AM\n",
+      "8            Australia *              3.7   -0.119591  AU\n",
+      "9              Austria *              3.6   -6.318255  AT\n"
+     ]
+    }
+   ],
+   "source": [
+    "final_df = pd.read_sql(\"SELECT * FROM mortarlity_final LIMIT 10;\", engine)\n",
+    "print(final_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "b7ad80eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "engine = create_engine('postgresql+psycopg2://postgres:123456@localhost:5432/world_data_psql')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "c0f4eed5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country_name</th>\n",
+       "      <th>mortarlity_rate</th>\n",
+       "      <th>gdp_growth</th>\n",
+       "      <th>abb</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan *</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>-2.351101</td>\n",
+       "      <td>AF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Albania *</td>\n",
+       "      <td>9.8</td>\n",
+       "      <td>-3.313756</td>\n",
+       "      <td>AL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Algeria *</td>\n",
+       "      <td>23.7</td>\n",
+       "      <td>-5.000000</td>\n",
+       "      <td>DZ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Andorra *</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>-11.183940</td>\n",
+       "      <td>AD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Angola *</td>\n",
+       "      <td>71.5</td>\n",
+       "      <td>-5.638215</td>\n",
+       "      <td>AO</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    country_name  mortarlity_rate  gdp_growth abb\n",
+       "0  Afghanistan *             58.0   -2.351101  AF\n",
+       "1      Albania *              9.8   -3.313756  AL\n",
+       "2      Algeria *             23.7   -5.000000  DZ\n",
+       "3      Andorra *              2.5  -11.183940  AD\n",
+       "4       Angola *             71.5   -5.638215  AO"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_df = pd.read_sql(\"SELECT * FROM mortarlity_final;\", engine)\n",
+    "final_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "d8ee0a6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_df.to_excel(r'F:\\project\\Healthy Sustainable Development Analysis\\mortarlity_final.xlsx', index=False)"
    ]
   }
  ],
